// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`4gl: comment.4gl program 1`] = `
Object {
  Symbol(jest-snapshot-serializer-raw): "

====================================options=====================================
debug: false
filepath: \\"W:\\\\\\\\ws_tds_vscode\\\\\\\\tds-parsers\\\\\\\\tests\\\\\\\\4gl\\\\\\\\comments/comment.4gl\\"
parserProcess: \\"program\\"
=====================================input======================================
# linha 1
# linha 2
# linha 3

--linha A
--linha B

--linha A1

--linha B2
--linha B3

{ bloco comentado de uma linha }

{ 
    bloco 
    comentado 
    de 
    varias
    linhas 
}

=====================================output=====================================
program:  [1:1-21:2] {C:1} {A:{}}
| comment: # linha 1\\\\n [1:1-1:10] {C:0} {A:{}}
| comment: # linha 2\\\\n [2:1-2:10] {C:0} {A:{}}
| comment: # linha 3\\\\n\\\\n [3:1-3:11] {C:0} {A:{}}
| comment: --linha A\\\\n [5:1-5:10] {C:0} {A:{}}
| comment: --linha B\\\\n\\\\n [6:1-6:11] {C:0} {A:{}}
| comment: --linha A1\\\\n\\\\n [8:1-8:12] {C:0} {A:{}}
| comment: --linha B2\\\\n [10:1-10:11] {C:0} {A:{}}
| comment: --linha B3\\\\n\\\\n [11:1-11:12] {C:0} {A:{}}
| blockComment: { bloco comentado de uma linha } [13:1-13:32] {C:0} {A:{}}
| newLine: \\\\n\\\\n [13:33-13:34] {C:0} {A:{}}
| blockComment: { \\\\n    bloco \\\\n    comentado \\\\n    de \\\\n    varias\\\\n    linhas \\\\n} [15:1-15:61] {C:0} {A:{}}
| newLine: \\\\n [21:2-21:2] {C:0} {A:{}}

================================================================================",
}
`;

exports[`4gl: comment.4gl token 1`] = `
Object {
  Symbol(jest-snapshot-serializer-raw): "

====================================options=====================================
debug: false
filepath: \\"W:\\\\\\\\ws_tds_vscode\\\\\\\\tds-parsers\\\\\\\\tests\\\\\\\\4gl\\\\\\\\comments/comment.4gl\\"
parserProcess: \\"token\\"
=====================================input======================================
# linha 1
# linha 2
# linha 3

--linha A
--linha B

--linha A1

--linha B2
--linha B3

{ bloco comentado de uma linha }

{ 
    bloco 
    comentado 
    de 
    varias
    linhas 
}

=====================================output=====================================
token:  [1:1-21:2] {C:1} {A:{}}
| comment: # linha 1\\\\n [1:1-1:10] {C:0} {A:{}}
| comment: # linha 2\\\\n [2:1-2:10] {C:0} {A:{}}
| comment: # linha 3\\\\n\\\\n [3:1-3:11] {C:0} {A:{}}
| comment: --linha A\\\\n [5:1-5:10] {C:0} {A:{}}
| comment: --linha B\\\\n\\\\n [6:1-6:11] {C:0} {A:{}}
| comment: --linha A1\\\\n\\\\n [8:1-8:12] {C:0} {A:{}}
| comment: --linha B2\\\\n [10:1-10:11] {C:0} {A:{}}
| comment: --linha B3\\\\n\\\\n [11:1-11:12] {C:0} {A:{}}
| blockComment: { bloco comentado de uma linha } [13:1-13:32] {C:0} {A:{}}
| newLine: \\\\n\\\\n [13:33-13:34] {C:0} {A:{}}
| blockComment: { \\\\n    bloco \\\\n    comentado \\\\n    de \\\\n    varias\\\\n    linhas \\\\n} [15:1-15:61] {C:0} {A:{}}
| newLine: \\\\n [21:2-21:2] {C:0} {A:{}}

================================================================================",
}
`;

exports[`4gl: comment-blocks.4gl program 1`] = `
Object {
  Symbol(jest-snapshot-serializer-raw): "

====================================options=====================================
debug: false
filepath: \\"W:\\\\\\\\ws_tds_vscode\\\\\\\\tds-parsers\\\\\\\\tests\\\\\\\\4gl\\\\\\\\comments/comment-blocks.4gl\\"
parserProcess: \\"program\\"
=====================================input======================================
main 
    { bloco comentado de uma linha }
end main 

{ 
    bloco 
    comentado 
    de 
    varias
    linhas 
}

=====================================output=====================================
program:  [1:1-11:2] {C:1} {A:{}}
| block:  [1:1-3:11] {C:3} {A:{}}
| | beginBlock:  [1:1-1:6] {C:1} {A:{}}
| | | keyword: main [1:1-1:4] {C:0} {A:{}}
| | | endLine: - [1:5-1:6] {C:0} {A:{}}
| | | -whiteSpace:   [1:5-1:5] {C:0} {A:{}}
| | | -newLine: \\\\n [1:6-1:6] {C:0} {A:{}}
| | bodyBlock:  [1:1-2:37] {C:1} {A:{}}
| | | whiteSpace:      [2:1-2:4] {C:0} {A:{}}
| | | blockComment: { bloco comentado de uma linha } [2:5-2:36] {C:0} {A:{}}
| | | newLine: \\\\n [2:37-2:37] {C:0} {A:{}}
| | endBlock:  [1:1-3:11] {C:1} {A:{}}
| | | keyword: end [3:1-3:3] {C:0} {A:{}}
| | | whiteSpace:   [3:4-3:4] {C:0} {A:{}}
| | | keyword: main [3:5-3:8] {C:0} {A:{}}
| | | endLine: - [3:9-3:11] {C:0} {A:{}}
| | | -whiteSpace:   [3:9-3:9] {C:0} {A:{}}
| | | -newLine: \\\\n\\\\n [3:10-3:11] {C:0} {A:{}}
| blockComment: { \\\\n    bloco \\\\n    comentado \\\\n    de \\\\n    varias\\\\n    linhas \\\\n} [5:1-5:61] {C:0} {A:{}}
| newLine: \\\\n [11:2-11:2] {C:0} {A:{}}

================================================================================",
}
`;

exports[`4gl: comment-blocks.4gl token 1`] = `
Object {
  Symbol(jest-snapshot-serializer-raw): "

====================================options=====================================
debug: false
filepath: \\"W:\\\\\\\\ws_tds_vscode\\\\\\\\tds-parsers\\\\\\\\tests\\\\\\\\4gl\\\\\\\\comments/comment-blocks.4gl\\"
parserProcess: \\"token\\"
=====================================input======================================
main 
    { bloco comentado de uma linha }
end main 

{ 
    bloco 
    comentado 
    de 
    varias
    linhas 
}

=====================================output=====================================
token:  [1:1-11:2] {C:1} {A:{}}
| keyword: main [1:1-1:4] {C:0} {A:{\\"statement\\":true}}
| whiteSpace:   [1:5-1:5] {C:0} {A:{}}
| newLine: \\\\n [1:6-1:6] {C:0} {A:{}}
| whiteSpace:      [2:1-2:4] {C:0} {A:{}}
| blockComment: { bloco comentado de uma linha } [2:5-2:36] {C:0} {A:{}}
| newLine: \\\\n [2:37-2:37] {C:0} {A:{}}
| keyword: end [3:1-3:3] {C:0} {A:{\\"statement\\":true}}
| whiteSpace:   [3:4-3:4] {C:0} {A:{}}
| keyword: main [3:5-3:8] {C:0} {A:{\\"statement\\":true}}
| whiteSpace:   [3:9-3:9] {C:0} {A:{}}
| newLine: \\\\n\\\\n [3:10-3:11] {C:0} {A:{}}
| blockComment: { \\\\n    bloco \\\\n    comentado \\\\n    de \\\\n    varias\\\\n    linhas \\\\n} [5:1-5:61] {C:0} {A:{}}
| newLine: \\\\n [11:2-11:2] {C:0} {A:{}}

================================================================================",
}
`;
